--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,11 @@ body {
   background-color: #ca3c3c;
   border-color: #bd2130;
 }
+.btn-primary {
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
 .btn__filter {
   border-color: lightgrey;
 }
@@ -132,6 +137,11 @@ body {
 }
 .stack-large > * + * {
   margin-top: 2.5rem;
+}
+.important {
+  font-size: 2rem !important;
+  text-decoration: underline !important;
+  color: red !important;
 }
 @media screen and (min-width: 550px) {
   .stack-small > * + * {
