--- a/src/index.css
+++ b/src/index.css
@@ -168,7 +168,7 @@ body {
   }
 }
 .todoapp > * {
-  max-width: 50rem;
+  max-width: 100% !important;
   margin-left: auto;
   margin-right: auto;
 }
